force-app/main/default/objects/CRM_AddPBMsAsOpptyTeamMember_Settings__c/CRM_AddPBMsAsOpptyTeamMember_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains setting related to the batch job CRM_AddPBMsAsOpptyTeamMember_Batch</description>
    <label>CRM :AddPBMsAsOpptyTeamMember : Settings</label>
</CustomObject>