force-app/main/default/objects/CRM_AddPBMsAsOpptyTeamMember_Settings__c/fields/ENABLE_SCHDULED_JOB__c.field-meta.xml
<CustomField>
    <fullName>ENABLE_SCHDULED_JOB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to false, the batch job will be terminated, but you need to run it manually to start again.
CRM_AddPBMsAsOpptyTeamMember_Batch p = new CRM_AddPBMsAsOpptyTeamMember_Batch();
DateTime currDT = DateTime.now().addMinutes(2);
integer sec = currDT.second();
integer min = currDT.minute();
String sch = sec + &apos; &apos; + min + &apos; &apos; + &apos;* ? * *&apos;; //0 5 * * * ?
system.debug(&apos;sch: &apos; + sch);
system.schedule(&apos;Exec of CRM_AddPBMsAsOpptyTeamMember_Batch&apos;, sch, p);</description>
    <inlineHelpText>If set to false, the batch job will terminated, but you need to run it manually to start again. See the fields description field how to start the batch job.</inlineHelpText>
    <label>ENABLE_SCHDULED_JOB</label>
    <type>Checkbox</type>
</CustomField>