force-app/main/default/objects/CRM_AddPBMsAsOpptyTeamMember_Settings__c/fields/RECUR__c.field-meta.xml
<CustomField>
    <fullName>RECUR__c</fullName>
    <description>Recurring time - the next time the job will run (Now + Recurring Time) in minutes</description>
    <inlineHelpText>Recurring time - the next time the job will run (Now + Recurring Time) in minutes</inlineHelpText>
    <label>RECUR</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>