force-app/main/default/objects/CRM_AddPBMsAsOpptyTeamMember_Settings__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <defaultValue>&quot;Channel Manager (PBM)&quot;</defaultValue>
    <description>TeamMemberRole for the Opportunity Team Member e.g., Channel Manager (PBM)</description>
    <inlineHelpText>TeamMemberRole for the Opportunity Team Member e.g., Channel Manager (PBM)</inlineHelpText>
    <label>Team Role</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>